--- a/4_Projetos_OpenSource/0_SISWEB-Frontend/addons_pages/charts.html
+++ b/4_Projetos_OpenSource/0_SISWEB-Frontend/addons_pages/charts.html
@@ -143,10 +143,10 @@
         <div id="layoutSidenav_content">
             <main>
                 <div class="container-fluid px-4">
-                    <h1 class="mt-4">Charts</h1>
+                    <h1 class="mt-4">Gráficos</h1>
                     <ol class="breadcrumb mb-4">
-                        <li class="breadcrumb-item"><a href="../index.html">Dashboard</a></li>
-                        <li class="breadcrumb-item active">Charts</li>
+                        <li class="breadcrumb-item"><a href="../index.html">Painel Inicial</a></li>
+                        <li class="breadcrumb-item active">Gráficos</li>
                     </ol>
                     <div class="card mb-4">
                         <div class="card-body">
