--- a/4_Projetos_OpenSource/0_SISWEB-Frontend/addons_pages/tables.html
+++ b/4_Projetos_OpenSource/0_SISWEB-Frontend/addons_pages/tables.html
@@ -144,10 +144,10 @@
         <div id="layoutSidenav_content">
             <main>
                 <div class="container-fluid px-4">
-                    <h1 class="mt-4">Tables</h1>
+                    <h1 class="mt-4">Tabelas</h1>
                     <ol class="breadcrumb mb-4">
-                        <li class="breadcrumb-item"><a href="../index.html">Dashboard</a></li>
-                        <li class="breadcrumb-item active">Tables</li>
+                        <li class="breadcrumb-item"><a href="../index.html">Painel Inicial</a></li>
+                        <li class="breadcrumb-item active">Tabelas</li>
                     </ol>
                     <div class="card mb-4">
                         <div class="card-body">
